fix: fix wrong fonts

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -305,3 +305,15 @@ li{
 	align-items: center;
 	justify-content: space-between;
 }
+a{
+    font-family:Arial, Helvetica, sans-serif
+}
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+}
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+}
